--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,34 @@
 <h1 class="mt-3 font-weight-light" > Youtube Videos</h1>
 <hr>
+<div class="card-columns">
+
+    <div class="card animate__animated animate__fadeIn" *ngFor="let video of videos">
+        <img [src]="video.thumbnails.high.url" alt="" class="card-img-top" alt="">
+        <div class="card-body">
+            <h5 class="card-title">{{ video.title}}</h5>
+            <p class="card-text">
+                <strong>Autor: </strong>{{ video.channelTitle }}
+            </p>
+            <p class="card-text">
+                <strong>Pbulicado: </strong> {{ video.publishedAt | date }}
+            </p>
+
+            <button class="btn btn-outline-primary btn-block"
+                    (click)="mostrarVideo( video )"
+                    >
+                Ver video
+            </button>
+        </div>
+    </div>
+
+</div>
+
+<div class="row mt-5 mb-5 text-center">
+    <div class="col">
+        <button class="btn btn-primary btn-lg"
+                (click)="cargarVideos()"
+        >
+            Siguiente p&aacute;gina
+        </button>
+    </div>
+</div>
